# schedule_assistant

./: .env.secret  .gitignore  Cargo.toml  README.md
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
check/: Cargo.toml
check/src/: main.rs
currentrms/: Cargo.toml
currentrms/src/: lib.rs
distance/: Cargo.toml
distance/src/: main.rs
email/: Cargo.toml
email/src/: main.rs
remove_quotes/: Cargo.toml
remove_quotes/src/: main.rs
schedule/: Cargo.toml
schedule/src/: arrange.rs  comms.rs  geolocate.rs  main.rs  retrieve.rs
schedule_assistant/: Cargo.toml
schedule_assistant/src/: authentication.rs  current_rms.rs  database.rs  endpoints.rs  json.rs  lib.rs  macros.rs  servicem8.rs
schedule_assistant/src/retrieve/: authentication.rs  endpoint.rs  fetch.rs  mod.rs
servicem8/: Cargo.toml
servicem8/src/: lib.rs
templates/: template.hbs
