[package]
name = "check"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
schedule_assistant = { path = "../schedule_assistant" }
serde_json = "1.0.57"
reqwest = "0.11.1"
serde = { version = "1.0.125", features = ["derive"] }
