[package]
name = "currentrms"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
url = "2.1.1"
