[package]
name = "email"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
currentrms = { path = "../currentrms" }
servicem8 = { path = "../servicem8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
chrono = "0.4.19"
handlebars = "3.5.2"
lettre = "0.9.5"
lettre_email = "0.9.4"
