[package]
name = "email"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
lettre = "0.9.5"
lettre_email = "0.9.4"
schedule_assistant = { path = "../schedule_assistant" }
serde_json = "1.0.57"
handlebars = "3.5.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.38"
serde = { version = "1.0.125", features = ["derive"] }
