[package]
name = "schedule"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
currentrms = { path = "../currentrms" }
dotenv = "0.15.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
chrono = "0.4.13"
url = "2.1.1"
