[package]
name = "schedule_assistant"
version = "0.1.0"
authors = ["Jared Watt <Jared.Watt@eroad.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.57"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["serde"] }
oauth2 = "3.0.0"
serde = { version = "1.0.125", features = ["derive"] }
